Update .travis.yml to do less builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
 ---
 language: rust
 cache: cargo
-rust:
-  - beta
-  - nightly
+rust: beta
 
 os:
   - windows
   - linux
   - osx
-
-
-matrix:
-  allow_failures:
-    - rust: nightly
-  fast_finish: true
