--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ branches:
 notifications:
   email: false
   slack: esanum:XFAkvhriKLtaV89LA5CUnSEN
-  on_success: never
+  on_success: change
   on_failure: always
   notify: true
